--- a/index.html
+++ b/index.html
@@ -243,6 +243,9 @@
                     <li id="menu-item-243"
                         class="menu-item menu-item-type-custom menu-item-object-custom menu-item-243"><a
                             href="#team" class="nav-link">Team</a></li>
+                    <li id="menu-item-244"
+                        class="menu-item menu-item-type-custom menu-item-object-custom menu-item-244"><a
+                            href="http://explorer.acedcoin.com" class="nav-link">Explorer</a></li>
                     <li id="menu-item-246"
                         class="menu-item menu-item-type-custom menu-item-object-custom menu-item-246"><a
                             href="#media">Events</a></li>
