--- a/index.html
+++ b/index.html
@@ -486,11 +486,11 @@
                                         <div class="wpb_single_image wpb_content_element vc_align_center">
 
                                             <figure class="wpb_wrapper vc_figure">
-                                                <div class="vc_single_image-wrapper   vc_box_border_grey"><img
+                                                <div class="vc_single_image-wrapper   vc_box_border_grey"><a href="https://github.com/Acedcoin/AceD/releases/download/v1.0/aced-qt.exe"><img
                                                         width="900" height="675" src="3_Image-066.jpg"
                                                         class="vc_single_image-img attachment-full" alt=""
                                                         srcset="3_Image-066.jpg 900w, 3_Image-066.jpg 300w, 3_Image-066.jpg 768w"
-                                                        sizes="(max-width: 900px) 100vw, 900px"></div>
+                                                        sizes="(max-width: 900px) 100vw, 900px"></a></div>
                                             </figure>
                                         </div>
                                     </div>
@@ -500,14 +500,15 @@
                                 <div class="vc_column-inner ">
                                     <div class="wpb_wrapper">
                                         <div class="wpb_text_column wpb_content_element  text-block">
-                                            <div class="wpb_wrapper">
-                                                <p style="text-align: center;">(Coming Soon)</p>
-                                                <div class="coicon">
-                                                    <div><img src="windows.png"/></div>
-                                                    <div><img src="Linux-icon.png"/></div>
-                                                    <div><img src="Apple-icon.png"/></div>
-                                                    <div><img src="raspberry-pi.png"/></div>
-                                                </div>
+                                            <div class="wpb_wrapper" style="text-align: center;">
+                                                <p>Early supporters program is live, where you will be able to acquire AceD at a rate of 0.75 USD directly from the AceD team. As an added benefit this gives you, the investor, the opportunity to potentially acquire sufficient AceD to set up a Masternode while at the same time assisting in enhancing the accessibility of AceD across exchange sites. Please get in touch with @MaGe-AceD9956 for MN presale inquires.</p>
+                                                <a class="btn btn-alt btn-sm" href="https://github.com/Acedcoin/AceD/releases/download/v1.0/aced-qt.exe" target="_self">Download Wallets</a>
+                                                <!--<div class="coicon">-->
+                                                    <!--<div><img src="windows.png"/></div>-->
+                                                    <!--<div><img src="Linux-icon.png"/></div>-->
+                                                    <!--<div><img src="Apple-icon.png"/></div>-->
+                                                    <!--<div><img src="raspberry-pi.png"/></div>-->
+                                                <!--</div>-->
 
                                                 <!--<ul class="btns">-->
                                                 <!--<li><a class="btn btn-sm" href="#">GET THE APP NOW</a></li>-->
