--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 <a id="popuplink" href="#inline" style="display:none;"></a>
 <div id="inline" style="display: none; text-align:center;background: #0D102A;padding: 5%;">
     <img src="logo-white.png" alt="" id="logo">
-    <h2>Early Supporters Program is now LIVE_</h2>
+    <h2>Early Supporters Program is now LIVE</h2>
     <p style="color: #fff;">Join AceD Early supporters program to get early access to Masternodes and Wallets. The raised funds are to be spent on Team Building, Platform Maintenance, Marketing, and Development. Please join our <a href="https://discord.gg/bW7sYBg">Discord</a> and contact @MaGe-AceD#9956 for sales inquiries.</p>
     <div class="wpb_wrapper">
         <div class="row" style="text-align: left;">
@@ -233,7 +233,7 @@
                 <ul id="menu-onepage-menu" class="navbar-nav">
                     <li id="menu-item-150"
                         class="menu-item menu-item-type-custom menu-item-object-custom menu-item-150"><a
-                            href="#intro" class="nav-link">What is AceD?</a></li>
+                            href="#intro" class="nav-link">What is AceD2?</a></li>
                     <li id="menu-item-241"
                         class="menu-item menu-item-type-custom menu-item-object-custom menu-item-241"><a
                             href="#tokensale" class="nav-link">Early Supporters</a></li>
