--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <ul id="menu-onepage-menu" class="navbar-nav">
                     <li id="menu-item-150"
                         class="menu-item menu-item-type-custom menu-item-object-custom menu-item-150"><a
-                            href="#intro" class="nav-link">What is AceD2?</a></li>
+                            href="#intro" class="nav-link">What is AceD?</a></li>
                     <li id="menu-item-241"
                         class="menu-item menu-item-type-custom menu-item-object-custom menu-item-241"><a
                             href="#tokensale" class="nav-link">Early Supporters</a></li>
