--- a/buypage/index.html
+++ b/buypage/index.html
@@ -10,7 +10,7 @@
 <div class='productSelector'>
 <select>
 <option value='100 MAZE:0.017'>
-100 MAZE - 0.017 (BTC)
+AceD - $0.75 per coin (USD)
 </option>
 <option data-singular value='MN TIER1 (6000MAZE):1.0'>
 MN TIER1 (6000MAZE) - 1.0 (BTC)
