--- a/buypage/index.html
+++ b/buypage/index.html
@@ -12,6 +12,7 @@
 <option value='100 MAZE:0.017'>
 AceD - $0.75 per coin (USD)
 </option>
+<!--
 <option data-singular value='MN TIER1 (6000MAZE):1.0'>
 MN TIER1 (6000MAZE) - 1.0 (BTC)
 </option>
@@ -30,7 +31,7 @@ MN TIER5 (48000MAZE) - 4.4 (BTC)
 <option data-singular value='MN TIER6 (60000MAZE):5.2'>
 MN TIER6 (60000MAZE) - 5.2 (BTC)
 </option>
-
+-->
 </select>
 </div>
 <div class='productQuantity' style=''>
@@ -41,7 +42,7 @@ MN TIER6 (60000MAZE) - 5.2 (BTC)
 <input type="text" name="Valid email address" id="Valid_email_address" placeholder="*Valid email address" data-required="1" />
 </div>
 <div class='field'>
-<input type="text" name="Valid MAZE address" id="Valid_MAZE_address" placeholder="*Valid MAZE address" data-required="1" />
+<input type="text" name="Valid AceD address" id="Valid_MAZE_address" placeholder="*Valid MAZE address" data-required="1" />
 </div>
 
 <div class='button small shadow' data-content='Purchase' id='create_order'>
