--- a/buypage/index.html
+++ b/buypage/index.html
@@ -42,7 +42,7 @@ MN TIER6 (60000MAZE) - 5.2 (BTC)
 <input type="text" name="Valid email address" id="Valid_email_address" placeholder="*Valid email address" data-required="1" />
 </div>
 <div class='field'>
-<input type="text" name="Valid AceD address" id="Valid_MAZE_address" placeholder="*Valid MAZE address" data-required="1" />
+<input type="text" name="Valid AceD address" id="Valid_MAZE_address" placeholder="*Valid AceD address" data-required="1" />
 </div>
 
 <div class='button small shadow' data-content='Purchase' id='create_order'>
