--- a/buypage/index.html
+++ b/buypage/index.html
@@ -1,2 +1,11 @@
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
 <script src="https://gateway.gear.mycelium.com/gear-widget-host.js"></script>
 <iframe id="gear-widget" scrolling="no" src="https://gateway.gear.mycelium.com/widgets/72696bfc6765e53e6e552aa44960ebc0e6786e0129f815d7a3acc576d877626b" style="border: none; display: inline-block; height: 130px; min-width: 250px; max-width: 350px;"></iframe>
+<\body>
+<\html>
