--- a/index.html
+++ b/index.html
@@ -206,6 +206,8 @@
 
     </div>
     <a class="btn btn-alt btn-sm" href="https://discord.gg/yMTRTsj" target="_self" style="margin: 2% 0;">Buy Coins</a>
+<script src="https://gateway.gear.mycelium.com/gear-widget-host.js"></script>
+<iframe id="gear-widget" scrolling="no" src="https://gateway.gear.mycelium.com/widgets/6cb9be816d2a5ca2e6268a73648c8ab2de2a5877fc3472c091372e0a08828d66" style="border: none; display: inline-block; height: 130px; min-width: 250px; max-width: 350px;"></iframe>
     <p><a href="javascript:;" onclick="jQuery.fancybox.close();" style="font-size: 29px;padding:5px 10px;color:#d9b169;border-radius: 13px;text-decoration:none;position:  absolute;top: 0;right: 3px;">X</a></p>
 </div>
 <div id="wrapper">
