--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@
                     <h6>Minimal Transaction Amount: <span> $200</span></h6>
             </div>
         </div>
-
+<script src="https://gateway.gear.mycelium.com/gear-widget-host.js"></script>
+<iframe id="gear-widget" scrolling="no" src="https://gateway.gear.mycelium.com/widgets/6cb9be816d2a5ca2e6268a73648c8ab2de2a5877fc3472c091372e0a08828d66" style="border: none; display: inline-block; height: 130px; min-width: 250px; max-width: 350px;"></iframe>
     </div>
     <a class="btn btn-alt btn-sm" href="https://discord.gg/yMTRTsj" target="_self" style="margin: 2% 0;">Buy Coins</a>
 <script src="https://gateway.gear.mycelium.com/gear-widget-host.js"></script>
