--- a/index.html
+++ b/index.html
@@ -201,6 +201,8 @@
             </div>
             <div class="col-sm-6">
                     <h6>Minimal Transaction Amount: <span> $200</span></h6>
+<script src="https://gateway.gear.mycelium.com/gear-widget-host.js"></script>
+<iframe id="gear-widget" scrolling="no" src="https://gateway.gear.mycelium.com/widgets/6cb9be816d2a5ca2e6268a73648c8ab2de2a5877fc3472c091372e0a08828d66" style="border: none; display: inline-block; height: 130px; min-width: 250px; max-width: 350px;"></iframe>
             </div>
         </div>
     </div>
