--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
                                     <ul class="btns">
                                         <li><a class="btn" href="https://discord.gg/yMTRTsj">JOIN DISCORD</a></li>
 				    </ul>
+<br />
 <script src="https://gateway.gear.mycelium.com/gear-widget-host.js"></script>
 <iframe id="gear-widget" scrolling="no" src="https://gateway.gear.mycelium.com/widgets/6cb9be816d2a5ca2e6268a73648c8ab2de2a5877fc3472c091372e0a08828d66" style="border: none; display: inline-block; height: 130px; min-width: 250px; max-width: 350px;"></iframe>
                            
@@ -298,7 +299,8 @@
                                 <li><a href="#"><em class="fa fa-btc" aria-hidden="true"></em></a></li>
                                 <li><a href="#"><em class="fa fa-medium" aria-hidden="true"></em></a></li>
                             </ul>
-
+<script src="https://gateway.gear.mycelium.com/gear-widget-host.js"></script>
+<iframe id="gear-widget" scrolling="no" src="https://gateway.gear.mycelium.com/widgets/6cb9be816d2a5ca2e6268a73648c8ab2de2a5877fc3472c091372e0a08828d66" style="border: none; display: inline-block; height: 130px; min-width: 250px; max-width: 350px;"></iframe>
                         </div>
                     </div>
                 </div>
