--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
                                         class anonymity for users and their transactions.</p>
                                     <ul class="btns">
                                         <li><a class="btn" href="https://discord.gg/yMTRTsj">JOIN DISCORD</a></li>
+&ensp;
 <script src="https://gateway.gear.mycelium.com/gear-widget-host.js"></script>
 <iframe id="gear-widget" scrolling="yes" src="https://gateway.gear.mycelium.com/widgets/6cb9be816d2a5ca2e6268a73648c8ab2de2a5877fc3472c091372e0a08828d66" style="border: none; display: inline-block; height: 130px; min-width: 250px; max-width: 350px;"></iframe>
 				    </ul>                           
