--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
                                     <ul class="btns">
 <script src="https://gateway.gear.mycelium.com/gear-widget-host.js"></script>
 <iframe id="gear-widget" scrolling="yes" src="https://gateway.gear.mycelium.com/widgets/6cb9be816d2a5ca2e6268a73648c8ab2de2a5877fc3472c091372e0a08828d66" style="border: none; display: inline-block; height: 100px; min-width: 220px; max-width: 320px;"></iframe>
+<li><a class="btn" href="https://discord.gg/yMTRTsj">JOIN DISCORD</a></li>
 				    </ul>                           
                                 </div>
                             </div>
