--- a/index.html
+++ b/index.html
@@ -316,6 +316,9 @@
     </div>
     <div class="clearfix"></div>
 </section>
+<body>
+<h1>Early supports program is now live. Price per coin 0.75 USD. Masternode collateral 1000 ACED</h1>
+</body>
 <br />
 <br />
 <br />
