--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     <div class="clearfix"></div>
 </section>
 <body>
-<h1>Early supports program is now live. Price per coin 0.75 USD. Masternode collateral 1000 ACED</h1>
+<p>Early supporters program is now live. Price per coin 0.75 USD. Masternode collateral 1000 ACED</p>
 </body>
 <br />
 <br />
