--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@
                                 <div class="wpb_wrapper" style="text-align: center;">
                                     <p><img src="topright_logo.gif" alt="header" style="width: 87%;max-width: 401px;"><br>
                                 </div>
+                                <div style="text-align: center;margin-top: 7%;"><a class="btn btn-alt btn-sm" href="https://discord.gg/yMTRTsj" target="_self">Join Our Discord</a></div>
                             </div>
                         </div>
                     </div>
@@ -317,7 +318,7 @@
     <div class="clearfix"></div>
 </section>
 <body>
-<font color="orange"><p>Early supporters program is now live. Price per coin 0.75 USD. Masternode collateral 1000 ACED. Please join Discord once you have paid and message @MaGe-AceD with your TXID.</p></font>
+<font color="orange"><p style="text-align: center;">Early supporters program is now live. Price per coin 0.75 USD. Masternode collateral 1000 ACED. Please join Discord once you have paid and message @MaGe-AceD with your TXID.</p></font>
 </body>
 <section id="intro"
          class="vc_rows wpb_row vc_row-fluid section section-pad section-bg-blend nopb vc_row-o-equal-height vc_row-o-content-middle vc_row-flex">
