--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
     <div class="clearfix"></div>
 </section>
 <body>
-<font color="orange"><p style="text-align: center;">Early supporters program is now live. Price per coin 0.75 USD. Masternode collateral 1000 ACED. Please join Discord once you have paid and message @MaGe-AceD with your TXID.</p></font>
+<font color="orange"><p style="text-align: center;padding: 7px 0; font-size: 1.1em;">Early supporters program is now live. Price per coin 0.75 USD. Masternode collateral 1000 ACED. Please join Discord once you have paid and message @MaGe-AceD with your TXID.</p></font>
 </body>
 <section id="intro"
          class="vc_rows wpb_row vc_row-fluid section section-pad section-bg-blend nopb vc_row-o-equal-height vc_row-o-content-middle vc_row-flex">
