--- a/index.html
+++ b/index.html
@@ -1607,6 +1607,10 @@ var mc4wp_forms_config = [];
             expires: 365 // the number of days cookie  will be effective
         });
         jQuery("#popuplink").fancybox({modal:true, maxWidth: 600, overlay : {closeClick : true}});
+        var loc = window.location.href+'';
+        if (loc.indexOf('http://')==0){
+            window.location.href = loc.replace('http://','https://');
+        }
     });
 </script>
 <script type="text/javascript" src="jquery.particleground.js"></script>
