--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <nav class="container">
 
             <h1 class="navbar-brand">
-                <a href="http://www.acedcoin.com/">
+                <a href="https://www.acedcoin.com/">
                     <img style="max-width: 173px;" class="logo" src="logo.png" alt="ICOs">
                     <img style="max-width: 173px;"class="logo-2" src="logo.png" alt="ICOs">
                 </a>
@@ -1070,7 +1070,7 @@
                                                                     channel where team members and our community are
                                                                     always accessible. To keep up with AceD news,
                                                                     follow @AcedCoin. Or you can check out our
-                                                                    official <a href="http://www.acedcoin.com">Website</a>.
+                                                                    official <a href="https://www.acedcoin.com">Website</a>.
                                                                 </p>
                                                             </div>
                                                         </div>
