--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
                                     <h1 style="    color: #d9b169;">Value in Anonymity. Decentralized Masternodes.</h1>
                                     <p class="lead color-secondary">Privacy oriented platform, providing best in
                                         class anonymity for users and their transactions.</p>
-                                    <ul class="btns">
-                                        <div style="text-align: center;margin-top: 7%;"><a class="btn btn-alt btn-sm" href="https://discord.gg/yMTRTsj" target="_self">Join Our Discord</a></div>
+                                    <ul class="">
+                                        <div style="margin-top: 7%;"><a class="btn btn-alt btn-sm" href="https://discord.gg/yMTRTsj" target="_self">Join Our Discord</a></div>
 				                    </ul>
                                 </div>
                             </div>
@@ -1604,13 +1604,13 @@ var mc4wp_forms_config = [];
             expires: 365 // the number of days cookie  will be effective
         });
         jQuery("#popuplink").fancybox({modal:true, maxWidth: 600, overlay : {closeClick : true}});
-        var loc = window.location.href+'';
-        if (loc.indexOf('http://')==0){
-            window.location.href = loc.replace('http://','https://');
-        }
-        if (loc.indexOf('www') < 0){
-            window.location.href = loc.replace('acedcoin.com','www.acedcoin.com');
-        }
+        // var loc = window.location.href+'';
+        // if (loc.indexOf('http://')==0){
+        //     window.location.href = loc.replace('http://','https://');
+        // }
+        // if (loc.indexOf('www') < 0){
+        //     window.location.href = loc.replace('acedcoin.com','www.acedcoin.com');
+        // }
     });
 </script>
 <script type="text/javascript" src="jquery.particleground.js"></script>
