--- a/buycoin.html
+++ b/buycoin.html
@@ -273,7 +273,7 @@
             <div class="container">
                 <div class="banner-content">
                     <div class="row">
-                        <div class="order-lg-first wpb_column vc_column_container vc_col-sm-12 vc_col-lg-6 vc_col-md-6">
+                        <div class="order-lg-first wpb_column vc_column_container vc_col-sm-12 vc_col-lg-5 vc_col-offset-lg-1 vc_col-md-6">
                             <div class="vc_column-inner ">
                                 <div class="wpb_wrapper">
                                     <div class="wpb_text_column wpb_content_element  vc_custom_1520825700169">
@@ -285,27 +285,6 @@
                                             </ul>
                                         </div>
                                     </div>
-                                    <ul class="social">
-                                        <li><a href="#"><em class="fa fa-facebook" aria-hidden="true"></em></a></li>
-                                        <li><a href="https://twitter.com/AcedCoin"><em class="fa fa-twitter"
-                                                                                       aria-hidden="true"></em></a></li>
-                                        <li><a href="#"><em class="fa fa-youtube-play" aria-hidden="true"></em></a></li>
-                                        <li><a href="#"><em class="fa fa-github" aria-hidden="true"></em></a></li>
-                                        <li><a href="#"><em class="fa fa-btc" aria-hidden="true"></em></a></li>
-                                        <li><a href="#"><em class="fa fa-medium" aria-hidden="true"></em></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="order-first wpb_column vc_column_container vc_col-sm-12 vc_col-lg-6 vc_col-md-6">
-                            <div class="vc_column-inner ">
-                                <div class="wpb_wrapper">
-                                    <div class="wpb_text_column wpb_content_element  header-image">
-                                        <div class="wpb_wrapper" style="text-align: center;">
-                                            <p><img src="topright_logo.gif" alt="header" style="width: 87%;max-width: 401px;"><br>
-                                        </div>
-                                        <div style="text-align: center;margin-top: 7%;"><a class="btn btn-alt btn-sm" href="https://discord.gg/yMTRTsj" target="_self">Join Our Discord</a></div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -315,111 +294,6 @@
         </div>
         <div class="clearfix"></div>
     </section>
-    <section id="contact" class="vc_rows wpb_row vc_row-fluid section-pad section-bg-alt">
-        <div class="container">
-            <div class="row">
-                <div class="wpb_column vc_column_container vc_col-sm-12">
-                    <div class="vc_column-inner ">
-                        <div class="wpb_wrapper">
-                            <div class="section-head text-center" style="margin-bottom: 11%;">
-                                <h2 class="section-title" >Twitter Feed<span>TWITTER</span></h2>
-                            </div>
-                        </div>
-                        <div class="wpb_wrapper cotwitter">
-                            <a class="twitter-timeline" href="https://twitter.com/AcedCoin?ref_src=twsrc%5Etfw">Tweets by AcedCoin</a>
-                            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="contact" class="vc_rows wpb_row vc_row-fluid section-pad section-bg-alt">
-        <div class="container">
-            <div class="row">
-                <div class="wpb_column vc_column_container vc_col-sm-12">
-                    <div class="vc_column-inner ">
-                        <div class="wpb_wrapper">
-                            <div class="vc_row wpb_row vc_inner vc_row-fluid">
-                                <div class="wpb_column vc_column_container vc_col-sm-12">
-                                    <div class="vc_column-inner ">
-                                        <div class="wpb_wrapper">
-                                            <div class="section-head text-center">
-                                                <h2 class="section-title">Contact AceD Coin <span>CONTACT</span></h2>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="wpb_text_column wpb_content_element  vc_custom_1520932193361 text-center">
-                                <div class="wpb_wrapper">
-                                    <p>Any question? Reach out to us and we’ll get back to you shortly.</p>
-                                </div>
-                            </div>
-                            <div class="vc_row wpb_row vc_inner vc_row-fluid">
-                                <div class="wpb_column vc_column_container vc_col-sm-12 vc_col-md-offset-2 vc_col-md-8">
-                                    <div class="vc_column-inner ">
-                                        <div class="wpb_wrapper">
-                                            <div class="wpb_text_column wpb_content_element  vc_custom_1520996880206">
-                                                <div class="wpb_wrapper">
-                                                    <ul class="contact-info">
-                                                        <li><em class="fa fa-envelope" aria-hidden="true">email</em>info@acedcoin.com</li>
-                                                        <li><a href="https://discord.gg/yMTRTsj" style="vertical-align: middle;"><img src="discord.png" style="margin:0 17px;"><span style="color: white;">Join us on discord</span></a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                            <div role="form" class="wpcf7" id="wpcf7-f301-p29-o1" lang="en-US"
-                                                 dir="ltr">
-                                                <div class="screen-reader-response"></div>
-                                                <form action="#wpcf7-f301-p29-o1" method="post" class="wpcf7-form"
-                                                      novalidate="novalidate">
-                                                    <div style="display: none;">
-                                                        <input type="hidden" name="_wpcf7" value="301">
-                                                        <input type="hidden" name="_wpcf7_version" value="5.0.1">
-                                                        <input type="hidden" name="_wpcf7_locale" value="en_US">
-                                                        <input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f301-p29-o1">
-                                                        <input type="hidden" name="_wpcf7_container_post" value="29">
-                                                    </div>
-                                                    <div class="comment-form text-center">
-                                                        <div class="form-results"></div>
-                                                        <div class="input-field">
-                                                        <span class="wpcf7-form-control-wrap your-name">
-                                                            <input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required input-line" aria-required="true" aria-invalid="false">
-                                                        </span>
-                                                            <label class="input-title">Your Name</label>
-                                                        </div>
-                                                        <div class="input-field">
-                                                        <span class="wpcf7-form-control-wrap your-email">
-                                                            <input  type="email" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email input-line" aria-required="true" aria-invalid="false">
-                                                        </span>
-                                                            <label class="input-title">Your Email</label>
-                                                        </div>
-                                                        <div class="input-field">
-                                                        <span class="wpcf7-form-control-wrap your-message">
-                                                            <textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea input-line txtarea" aria-invalid="false"></textarea>
-                                                        </span>
-                                                            <label class="input-title">Your Message</label>
-                                                        </div>
-                                                        <div class="input-field">
-                                                            <button type="submit" class="btn">Submit</button>
-                                                        </div>
-                                                    </div>
-                                                    <div class="wpcf7-response-output wpcf7-display-none"></div>
-                                                </form>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="clearfix"></div>
-    </section>
-
-
     <div class="section subscribe-section section-connect section-pad-md section-bg">
         <div class="container">
             <div class="row text-center">
