--- a/buycoin.html
+++ b/buycoin.html
@@ -263,13 +263,9 @@
                 </div>
             </nav>
         </div>
-        <!-- End Navbar -->
     </header>
-    <!-- End Header -->
-    <!-- End Header -->
-
     <section id="particles" class="vc_rows wpb_row vc_row-fluid mobile-center banner-particle banner-curb vc_row-o-equal-height vc_row-o-content-middle vc_row-flex banner d-flex align-items-center">
-        <div class="subparticle">
+        <div class="subparticle cosubparticle">
             <div class="container">
                 <div class="banner-content">
                     <div class="row">
@@ -277,11 +273,11 @@
                             <div class="vc_column-inner ">
                                 <div class="wpb_wrapper">
                                     <div class="wpb_text_column wpb_content_element  vc_custom_1520825700169">
-                                        <div class="wpb_wrapper">
-                                            <h1 style="    color: #d9b169;">Early supporters program is now live. Price per coin 0.75 USD. Masternode collateral 1000 ACED. Please join Discord once you have paid and message @MaGe-AceD#9956 with your TXID.</h1>
+                                        <div class="wpb_wrapper text-center">
+                                            <h2 style="margin-bottom: 67px; color: #d9b169;">Early supporters program is now live. Price per coin 0.75 USD. Masternode collateral 1000 ACED. Please join Discord once you have paid and message @MaGe-AceD#9956 with your TXID.</h2>
                                             <ul class="btns">
                                                 <script src="https://gateway.gear.mycelium.com/gear-widget-host.js"></script>
-                                                <iframe id="gear-widget" scrolling="no" src="https://gateway.gear.mycelium.com/widgets/6cb9be816d2a5ca2e6268a73648c8ab2de2a5877fc3472c091372e0a08828d66" style="border: none; display: inline; height: 100px; min-width: 220px; max-width: 320px;"></iframe>
+                                                <iframe id="gear-widget" scrolling="no" src="https://gateway.gear.mycelium.com/widgets/6cb9be816d2a5ca2e6268a73648c8ab2de2a5877fc3472c091372e0a08828d66" style="border: 1.3px solid #d1ab65; border-radius: 7px; height: 169px; min-width: 220px;max-width: 361px;width: 100%;"></iframe>
                                             </ul>
                                         </div>
                                     </div>
