--- a/index.html
+++ b/index.html
@@ -282,7 +282,10 @@
                                     <p class="lead color-secondary">Privacy oriented platform, providing best in
                                         class anonymity for users and their transactions.</p>
                                     <ul class="">
-                                        <div style="margin-top: 7%;"><a class="btn btn-alt btn-sm" href="https://discord.gg/yMTRTsj" target="_self">Join Our Discord</a></div>
+                                        <div style="margin-top: 7%;">
+                                            <a class="btn btn-alt btn-sm" href="https://discord.gg/yMTRTsj" target="_self">Join Our Discord</a>
+                                            <a class="btn btn-alt btn-sm" href="/buycoin.html" target="_self">Buy Coins</a>
+                                        </div>
 				                    </ul>
                                 </div>
                             </div>
@@ -1404,117 +1407,6 @@
     <div class="loader-section loader-bottom"></div>
 </div>
 <!-- Preloader End -->
-</div>
-<div class="demo-theme-content">
-<a class="demo-close" href="javascript:void(0)">×</a>
-<div class="dtc-inner">
-    <div class="dtc-single">
-        <div class="dtc-content">
-            <div class="demo-image">
-                <a href="http://wpdemo.oceanthemes.net/icos/home-light/">
-                    <img src="demo-pro.jpg" alt="demo-pro"><span class="demo-new-badge">v1.0</span>
-                </a>
-            </div>
-            <a class="demo-title" href="#">
-                <span>Default Light</span>
-                <h5>Landing V1</h5>
-            </a>
-            <ul>
-                <li><a href="http://wpdemo.oceanthemes.net/icos-light/">Default</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos-light/home-animate/">Animated</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos-light/home-particle/">Particle</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos-light/home-particle-animate/">Particle - Ani</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos-light/blog/">Blog Archive</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos-light/the-intersection-where-blockchain-meets-energy/">Blog Single</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos-light/home-token-sales/">Token Sales <small>New - Hot</small></a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="dtc-single">
-        <div class="dtc-content">
-            <div class="demo-image">
-                <a href="http://wpdemo.oceanthemes.net/icos/">
-                    <img src="demo-dark.jpg" alt="demo-dark"><span class="demo-new-badge">v1.0</span>
-                </a>
-            </div>
-            <a class="demo-title" href="#">
-                <span>Default Dark</span>
-                <h5>Landing V2</h5>
-            </a>
-            <ul>
-                <li><a href="http://wpdemo.oceanthemes.net/icos/">Default</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos/home-animate/">Animated</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos/home-particle/">Particle</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos/home-particle-animate/">Particle - Ani</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos/blog/">Blog Archive</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos/the-intersection-where-blockchain-meets-energy/">Blog Single</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos/home-token-sales/">Token Sales <small>New - Hot</small> </a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="dtc-single">
-        <div class="dtc-content">
-            <div class="demo-image"><a href="http://wpdemo.oceanthemes.net/icos/home-pro/">
-                <img  src="demo-dark-pro.jpg" alt="demo-azure"></a><span class="demo-new-badge">v1.1 (new)</span>
-            </div>
-            <a class="demo-title" href="#">
-                <span>Dark Pro</span>
-                <h5>Landing V5</h5>
-            </a>
-            <ul>
-                <li><a href="http://wpdemo.oceanthemes.net/icos/home-pro/">Default</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos/home-pro-animate/">Animated</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos/home-particle-pro/">Particle</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos/home-particle-pro-animate/">Particle - Ani</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos/blog/">Blog Archive</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos/the-intersection-where-blockchain-meets-energy-2/">Blog Single</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos/home-pro-token-sales/">Token Sales <small>New - Hot</small> </a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="dtc-single">
-        <div class="dtc-content">
-            <div class="demo-image">
-                <a href="http://wpdemo.oceanthemes.net/icos-azure/">
-                    <img src="demo-azure.jpg" alt="demo-azure">
-                </a>
-                <span class="demo-new-badge">v1.1 (new)</span>
-            </div>
-            <a class="demo-title" href="#">
-                <span>Default Azure</span>
-                <h5>Landing V3</h5>
-            </a>
-            <ul>
-                <li><a href="http://wpdemo.oceanthemes.net/icos-azure/">Default</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos-azure/home-animated/">Animated</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos-azure/home-particle/">Particle</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos-azure/home-particle-animated/">Particle - Ani</a> </li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos-azure/blog/">Blog Archive</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos-azure/the-intersection-where-blockchain-meets-energy-2/">Blog Single</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos-azure/home-token-sales/">Token Sales <small>New - Hot</small> </a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="dtc-single">
-        <div class="dtc-content">
-            <div class="demo-image"><a href="http://wpdemo.oceanthemes.net/icos-azure/home-pro/"><img
-                    src="demo-azure.jpg" alt="demo-azure"></a><span class="demo-new-badge">v1.1 (new)</span></div>
-            <a class="demo-title" href="#">
-                <span>Azure Light Pro</span>
-                <h5>Landing V4</h5>
-            </a>
-            <ul>
-                <li><a href="http://wpdemo.oceanthemes.net/icos-azure/home-pro/">Default</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos-azure/home-pro-animated/">Animated</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos-azure/home-particle-pro/">Particle</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos-azure/home-particle-pro-animated/">Particle - Ani</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos-azure/blog/">Blog Archive</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos-azure/the-intersection-where-blockchain-meets-energy-2/">Blog Single</a></li>
-                <li><a href="http://wpdemo.oceanthemes.net/icos-azure/home-pro-token-sales/">Token Sales<small>New - Hot</small></a></li>
-            </ul>
-        </div>
-    </div>
-</div>
 </div>
 
 <script type="text/javascript">(function () {
