--- a/buycoin.html
+++ b/buycoin.html
@@ -202,28 +202,28 @@
                                 href="https://www.acedcoin.com/#intro" class="nav-link">What is AceD?</a></li>
                         <li id="menu-item-241"
                             class="menu-item menu-item-type-custom menu-item-object-custom menu-item-241"><a
-                                href="#tokensale" class="nav-link">Early Supporters</a></li>
+                                href="https://www.acedcoin.com/#tokensale" class="nav-link">Early Supporters</a></li>
                         <li id="menu-item-242"
                             class="menu-item menu-item-type-custom menu-item-object-custom menu-item-242"><a
-                                href="#roadmap" class="nav-link">Roadmap</a></li>
+                                href="https://www.acedcoin.com/#roadmap" class="nav-link">Roadmap</a></li>
                         <li id="menu-item-243"
                             class="menu-item menu-item-type-custom menu-item-object-custom menu-item-243"><a
-                                href="#team" class="nav-link">Team</a></li>
+                                href="https://www.acedcoin.com/#team" class="nav-link">Team</a></li>
                         <li id="menu-item-244"
                             class="menu-item menu-item-type-custom menu-item-object-custom menu-item-244"><a
                                 href="http://explorer.acedcoin.com" class="nav-link">Explorer</a></li>
                         <li id="menu-item-246"
                             class="menu-item menu-item-type-custom menu-item-object-custom menu-item-246"><a
-                                href="#media">Events</a></li>
+                                href="https://www.acedcoin.com/#media">Events</a></li>
                         <li id="menu-item-247"
                             class="menu-item menu-item-type-custom menu-item-object-custom menu-item-247"><a
-                                href="#faqs">FAQ</a></li>
+                                href="https://www.acedcoin.com/#faqs">FAQ</a></li>
                         <li id="menu-item-248"
                             class="menu-item menu-item-type-custom menu-item-object-custom menu-item-248"><a
-                                href="#contact" class="nav-link">Contact</a></li>
+                                href="https://www.acedcoin.com/#contact" class="nav-link">Contact</a></li>
                     </ul>
                     <ul class="navbar-nav navbar-btns">
-                        <li class="nav-item"><a class="nav-link btn btn-sm btn-outline menu-link" href="#application">Wallets</a>
+                        <li class="nav-item"><a class="nav-link btn btn-sm btn-outline menu-link" href="https://www.acedcoin.com/#application">Wallets</a>
                         </li>
                         <li class="nav-item"><a class="nav-link btn btn-sm btn-outline menu-link"
                                                 href="https://discord.gg/yMTRTsj">Discord</a></li>
