--- a/index.html
+++ b/index.html
@@ -284,7 +284,6 @@
                                     <ul class="">
                                         <div style="margin-top: 7%;">
                                             <a class="btn btn-alt btn-sm" href="https://discord.gg/yMTRTsj" target="_self">Join Our Discord</a>
-                                            <a class="btn btn-alt btn-sm" href="/buycoin.html" target="_self">Buy Coins</a>
                                         </div>
 				                    </ul>
                                 </div>
@@ -300,6 +299,7 @@
                             </ul>
                         </div>
                     </div>
+
                 </div>
                 <div class="order-first wpb_column vc_column_container vc_col-sm-12 vc_col-lg-6 vc_col-md-6">
                     <div class="vc_column-inner ">
@@ -313,6 +313,9 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="text-center" style="padding-top: 7%;">
+            <a class="btn btn-alt btn-sm" style="font-size: 23px; padding: 5px 47px;" href="/buycoin.html" target="_self">Buy Coins</a>
         </div>
     </div>
     </div>
