--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 </div>
             </div>
         </div>
-        <div class="text-center" style="padding-top: 7%;">
+        <div class="text-center co_buybutton">
             <a class="btn btn-alt btn-sm" style="font-size: 23px; padding: 5px 47px;" href="/buycoin.html" target="_self">Buy Coins</a>
         </div>
     </div>
