--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             </div>
         </div>
     </div>
-    <a class="btn btn-alt btn-sm" href="https://discord.gg/yMTRTsj" target="_self" style="margin: 2% 0;">Buy Coins</a>
+    <a class="btn btn-alt btn-sm" href="https://www.acedcoin.com/buycoin.html" target="_self" style="margin: 2% 0;">Buy Coins</a>
     <p><a href="javascript:;" onclick="jQuery.fancybox.close();" style="font-size: 29px;padding:5px 10px;color:#d9b169;border-radius: 13px;text-decoration:none;position:  absolute;top: 0;right: 3px;">X</a></p>
 </div>
 <div id="wrapper">
